[package]
name = "wsmq-rs"
version = "0.3.0"
description = "A simple messaging library based on websockets and protocol buffers."
authors = ["Jung-Kwang Lee <ntoskrnl7@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.25"
uuid = { version="0.8.2", features=["v4"] }

futures = "0.3.15"
futures-util = "0.3.15"
futures-channel = "0.3.15"

url = { version="2.2.2", features=["serde"] }
tokio = { version="1.6.1", features=["sync", "rt", "time", "rt-multi-thread", "macros"] }
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version="0.15.0", features=["connect", "native-tls"] }
protobuf = { version="2.23.0", features=["with-bytes"] }
snap = "1.0.5"

[build-dependencies]
protobuf-codegen-pure = "2.3.1"
protoc-rust = "2.23.0"

[dev-dependencies]
service-rs = { git="https://github.com/ntoskrnl7/service-rs.git", branch="main" }
